--- a/libbeat/docs/version.asciidoc
+++ b/libbeat/docs/version.asciidoc
@@ -1,5 +1,5 @@
-:stack-version: 8.17.0
-:doc-branch: main
+:stack-version: 8.18.0
+:doc-branch: 8.x
 :go-version: 1.22.9
 :release-state: unreleased
 :python: 3.7
